Set ext dirs to lib dir in plugin.bat
The wildcarded classpath does not seem to work on Windows.  Changing
to setting the ext dirs to the lib folder does.